--- a/src/components/employees-list-item/employees-list-item.css
+++ b/src/components/employees-list-item/employees-list-item.css
@@ -32,11 +32,11 @@
 }
 
 .list-group-item .btn-cookie {
-    color: #e09f3e;
+    color: #FFA726;
 }
 
 .list-group-item .btn-trash {
-    color: #e5383b;
+    color: #E53935;
 }
 
 .list-group-item .fa-star {
@@ -45,7 +45,7 @@
     text-align: center;
     line-height: 35px;
     font-size: 16px;
-    color: #FFD700;
+    color: #FFEB3B;
     transition: 0.3s all;
     transform: translateX(30px);
     opacity: 0;
@@ -57,7 +57,7 @@
 }
 
 .list-group-item.increase .list-group-item-label, .list-group-item.increase .list-group-item-input {
-    color: #e09f3e;
+    color: #FFA726;
 }
   
 .list-group-item.increase .btn-star {
